<resources>
    <string name="app_name">ConoceMas</string>

    <string name="facebook_app_id">138082700181103</string>
    <string name="fb_login_protocol_scheme">fb138082700181103</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Mapa</string>
    <string name="nav_profile">Perfil</string>
    <string name="nav_trips">Viajes</string>
    <string name="nav_settings">Configuracion</string>
    <string name="nav_help">Ayuda</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Mapa</item>
        <item>Perfil</item>
        <item>Tus últimos viajes</item>
        <item>Configuración</item>
        <item>Ayuda</item>
    </string-array>

    <string name="log_out">Salir</string>
    <string name="action_logout">Logout</string>
    <string name="hello_blank_fragment">Holi, soy un fragmento en blanco :D</string>
    <string name="title_activity_maps">Map</string>

    <!-- Help Fragment -->
    <string name="help_fragment_message">¿Tienes algún problema?</string>
    <string name="help_fragment_contact_us">contáctanos en</string>
    <string name="help_fragment_email">ayuda@conocemas.com</string>
</resources>
