<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="salle.com.conocemas.fragment.HelpFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/help_fragment_message"
            android:gravity="center"
            android:layout_weight="1"
            style="@style/message_title"/>

       <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/question" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/help_fragment_contact_us"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            style="@style/message_details"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/help_fragment_email"
            android:gravity="center|top"
            android:layout_weight="1"
            style="@style/message_details_accent"/>

    </LinearLayout>
</FrameLayout>
